--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -21,6 +21,16 @@ add_library( # Sets the name of the library.
              src/main/cpp/md5.cpp
              src/main/cpp/my_utils.cpp)
 
+
+add_library(des_lib
+            SHARED IMPORTED)
+
+set_target_properties(des_lib
+  PROPERTIES IMPORTED_LOCATION
+  ${CMAKE_SOURCE_DIR}/src/main/jniLibs/${ANDROID_ABI}/libdes3_native_lib.so)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
+
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
 # default, you only need to specify the name of the public NDK library
@@ -40,7 +50,7 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
                        cipher_native_lib
-
+                                              des_lib
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib} )
